k8s/notes/resources/internal-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer

    gethomepage.dev/href: 'https://notes.durbin.casa'
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/app: notes
    gethomepage.dev/group: Other
    gethomepage.dev/icon: notes
    gethomepage.dev/name: Notes
    gethomepage.dev/widget.type: notes
    gethomepage.dev/widget.url: http://notes-service

spec:
  ingressClassName: internal
  rules:
    - host: &host notes.durbin.casa
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: service
                port:
                  name: http
  tls:
    - secretName: durbin-casa-wildcard-cert
      hosts:
        - *host
